fix mongo support